# PyCLEM

./: .copier-answers.yml  LICENSE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
Models/: mask_rcnn_pr_0600.h5.REMOVED.git-id
examples/: analysis_template.ipynb
src/pyclem/: __init__.py  analyse.py  cellmask.py  checkseg.py  file_io.py  io.py  scripts.py  stats.py  utils.py
src/pyclem/prem_seg/: PR_segmentation.py  inspect_PR.py  inspect_data_my.py  main.py
